@@ -19,6 +19,7 @@ function refresh_scripts()
     reqscript('internal/quickfort/api')
     reqscript('internal/quickfort/build')
     reqscript('internal/quickfort/building')
+    reqscript('internal/quickfort/burrow')
     reqscript('internal/quickfort/command')
     reqscript('internal/quickfort/common')
     reqscript('internal/quickfort/dig')
