@@ -31,6 +31,7 @@ Template for new versions:
 
 ## New Features
 - `gui/design`: show selected dimensions next to the mouse cursor when designating with vanilla tools, for example when painting a burrow or designating digging
+- `quickfort`: new blueprint mode for designating burrows
 
 ## Fixes
 - `gui/unit-syndromes`: show the syndrome names properly in the UI
